WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
113947
REGRESSION (
r147373
): Auto-sizing doesn't always respect minimum width changes
https://bugs.webkit.org/show_bug.cgi?id=113947
Summary
REGRESSION (r147373): Auto-sizing doesn't always respect minimum width changes
Tim Horton
Reported
2013-04-04 12:11:05 PDT
Now that we reset the size of the FrameView and do layout upon every autoSizeIfEnabled, we also need to reset our width to the minimum auto-size width. Previously we were resetting to the FrameView's current width, which is vaguely OK if we only reset it the first time we autosize, but breaks everything (makes minimum width changes not take effect unless the view is forcefully resized) if we reset it every time.
Attachments
patch
(1.65 KB, patch)
2013-04-04 12:36 PDT
,
Tim Horton
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2013-04-04 12:11:45 PDT
<
rdar://problem/13579024
>
Tim Horton
Comment 2
2013-04-04 12:36:51 PDT
Created
attachment 196505
[details]
patch
Tim Horton
Comment 3
2013-04-04 12:57:50 PDT
https://trac.webkit.org/r147664
Benjamin Poulain
Comment 4
2013-04-04 14:11:10 PDT
fast/layers/no-clipping-overflow-hidden-added-after-transition.html fails after this patch:
http://build.webkit.org/results/Apple%20MountainLion%20Debug%20WK1%20(Tests)/r147664%20(6940)/results.html
Can you please have a look?
Tim Horton
Comment 5
2013-04-04 14:14:58 PDT
(In reply to
comment #4
)
> fast/layers/no-clipping-overflow-hidden-added-after-transition.html fails after this patch: > >
http://build.webkit.org/results/Apple%20MountainLion%20Debug%20WK1%20(Tests)/r147664%20(6940)/results.html
> > Can you please have a look?
There's no way my change affected tests on Mac at all.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug